--- a/.github/workflows/python_versions.yml
+++ b/.github/workflows/python_versions.yml
@@ -12,7 +12,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -31,7 +30,7 @@ jobs:
         python -m pip install .[dev]
     - name: Lint with flake8
       run: |
-        flake8
+        flake8 .
     - name: Test with pytest
       run: |
         pytest
